[gd_scene load_steps=6 format=3 uid="uid://baf1tltiu27ji"]

[ext_resource type="Script" uid="uid://cn7uplbs2dskw" path="res://all_gdscripts/inventory.gd" id="1_7g8kd"]
[ext_resource type="PackedScene" uid="uid://cuyj8kg4lgcyb" path="res://UI/inventory_button.tscn" id="2_7g8kd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7g8kd"]
bg_color = Color(0.109804, 0.109804, 0.109804, 0.792157)

[sub_resource type="CircleShape2D" id="CircleShape2D_23vm5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7g8kd"]
size = Vector2(46.8125, 37.125)

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 3.0
offset_right = -4.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7g8kd")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.0
offset_top = -252.0
offset_right = 169.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7g8kd")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.268
anchor_top = 0.207
anchor_right = 0.638
anchor_bottom = 0.625
offset_left = 0.263977
offset_top = -0.136017
offset_right = 0.0239868
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.771
anchor_top = 0.836
anchor_right = 0.991
anchor_bottom = 0.977
offset_left = -97.192
offset_top = -416.728
offset_right = -208.632
offset_bottom = -454.096
text = "Add Items 1"
expand_icon = true

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.881
anchor_top = 0.905
anchor_right = 0.991
anchor_bottom = 0.977
offset_left = -222.912
offset_top = -400.44
offset_right = -207.632
offset_bottom = -384.096
text = "Remove Items 1
"
expand_icon = true

[node name="Button4" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.771
anchor_top = 0.836
anchor_right = 0.991
anchor_bottom = 0.977
offset_left = -98.192
offset_top = -284.728
offset_right = -205.632
offset_bottom = -325.096
text = "Add Items 2"
expand_icon = true

[node name="Button5" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.703
anchor_top = 0.836
anchor_right = 0.991
anchor_bottom = 0.977
offset_left = -19.856
offset_top = -226.728
offset_right = -206.632
offset_bottom = -264.096
text = "Remove Items 2"
expand_icon = true

[node name="MouseArea" type="Area2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
shape = SubResource("CircleShape2D_23vm5")

[node name="InventoryButton" parent="MouseArea" instance=ExtResource("2_7g8kd")]
visible = false

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 679.0
offset_top = 497.0
offset_right = 731.0
offset_bottom = 537.0
text = "Trash"

[node name="TrashArea" type="Area2D" parent="Button3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button3/TrashArea"]
position = Vector2(26, 19)
shape = SubResource("RectangleShape2D_7g8kd")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 482.0
offset_top = 74.0
offset_right = 562.0
offset_bottom = 99.0
text = "Inventory"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Button4" to="." method="_on_button_4_button_down"]
[connection signal="button_down" from="Button5" to="." method="_on_button_5_button_down"]
[connection signal="area_entered" from="MouseArea" to="." method="_on_mouse_area_area_entered"]
[connection signal="area_exited" from="MouseArea" to="." method="_on_mouse_area_area_exited"]
[connection signal="area_entered" from="Button3/TrashArea" to="." method="_on_trash_area_area_entered"]
[connection signal="area_exited" from="Button3/TrashArea" to="." method="_on_trash_area_area_exited"]
